# Criando-API-FastAPI-Utilizando-TDD

./: docker-compose.yml  pyproject.toml  readme.md
tests/usecases/: test_product.py
